--- a/Cursos/Curso ES6+ Avançado/Promisses/index.html
+++ b/Cursos/Curso ES6+ Avançado/Promisses/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promisses</title>
 </head>
-<body>
+<body style='background:#141412;'>
     <script src="js.js"></script>
 </body>
 </html>
